// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`card component should render with children 1`] = `
<div
  class="card__StyledCard-sc-1u97707-0 kjNLkR"
>
  <div
    class="card__CardBody-sc-1u97707-1 dcgIac"
  >
    Hello World
  </div>
</div>
`;

exports[`card component should render with header 1`] = `
<div
  class="card__StyledCard-sc-1u97707-0 kjNLkR"
>
  <div
    class="card-header__CardHeader-sc-17r9xuv-0 bLqXRj card-header"
  >
    <h2
      class="card-heading__CardHeading-sc-1332skt-0 eWLSjQ"
    >
      Welcome Message
    </h2>
  </div>
  <div
    class="card__CardBody-sc-1u97707-1 dcgIac"
  >
    Hello World
  </div>
</div>
`;
